--- a/python03.ipynb
+++ b/python03.ipynb
@@ -9,6 +9,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1dff2058-a089-4e49-806b-abf1aac43752",
+   "metadata": {},
+   "source": [
+    "## if문"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "id": "e59aabdb-63df-4758-a167-7ba293a23d6d",
@@ -258,11 +266,206 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "78fa88cb-f403-4bdf-acc8-fb83f8e52beb",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A회사 불합격입니다.\n",
+      "B회사 합격입니다.\n",
+      "C회사 합격입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "me = 'Python'\n",
+    "compA = ['JAVA','CSS','Javascript','C','MySQL']\n",
+    "compB = ['JAVA','Python','Javascript','C','MySQL']\n",
+    "compC = ['JAVA','Python','MySQL']\n",
+    "if me in compA:\n",
+    "    print(\"A회사 합격입니다.\")\n",
+    "else:\n",
+    "    print(\"A회사 불합격입니다.\")\n",
+    "if me in compB:\n",
+    "    print(\"B회사 합격입니다.\")\n",
+    "else:\n",
+    "    print(\"B회사 불합격입니다.\")\n",
+    "if me in compC:\n",
+    "    print(\"C회사 합격입니다.\")\n",
+    "else:\n",
+    "    print(\"C회사 불합격입니다.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "5ab0a8f7-bab0-45b1-9132-2385e43a1831",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "당신의 점수를 입력하세요 :  44\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F학점입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# if 100 >= num >= 90:\n",
+    "#     print(\"당신의 학점은 'A' 입니다.\")\n",
+    "# elif 90 > num >= 80:\n",
+    "#     print(\"당신의 학점은 'B' 입니다.\")\n",
+    "# elif 80 > num >= 70:\n",
+    "#     print(\"당신의 학점은 'C' 입니다.\")\n",
+    "# elif 70 > num >= 60:\n",
+    "#     print(\"당신의 학점은 'D' 입니다.\")\n",
+    "# elif 60 > num >= 0:\n",
+    "#     print(\"당신의 학점은 'F' 입니다.\")\n",
+    "# else:\n",
+    "#     print(\"잘 못 입력하셨습니다.\")\n",
+    "\n",
+    "# grade = 'F'\n",
+    "# if 90 <= num: grade = 'A'\n",
+    "# if 80 <= num < 90: grade = 'B'\n",
+    "# if 70 <= num < 80: grade = 'C'\n",
+    "# if 60 <= num < 70: grade = 'D'\n",
+    "# print(f'{grade}학점입니다.')\n",
+    "num = int(input(\"당신의 점수를 입력하세요 : \"))\n",
+    "\n",
+    "if 90 <= num: grade = 'A'\n",
+    "elif 80 <= num: grade = 'B'\n",
+    "elif 70 <= num: grade = 'C'\n",
+    "elif 60 <= num: grade = 'D'\n",
+    "else: grade = 'F'\n",
+    "print(f'{grade}학점입니다.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "b0d94e1b-2a34-425b-a0fe-9e6c023186d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "현재 온도를 입력하세요 :  10\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "지금은 가을🌀입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "temp = int(input(\"현재 온도를 입력하세요 : \"))\n",
+    "\n",
+    "if 25 <= temp: season = '여름🔥'\n",
+    "elif 15 <= temp: season = '봄🌞'\n",
+    "elif 10 <= temp: season = '가을🌀'\n",
+    "else: season = '겨울❄️'\n",
+    "print(f'지금은 {season}입니다.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80f467a7-8d39-4800-b4e8-696017588a85",
+   "metadata": {},
+   "source": [
+    "## while 문"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "b2c06bb2-1a3e-41ce-9d91-f53fea7b39ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "나무를 1번 찍었습니다.\n",
+      "나무를 2번 찍었습니다.\n",
+      "나무를 3번 찍었습니다.\n",
+      "나무를 4번 찍었습니다.\n",
+      "나무를 5번 찍었습니다.\n",
+      "나무를 6번 찍었습니다.\n",
+      "나무를 7번 찍었습니다.\n",
+      "나무를 8번 찍었습니다.\n",
+      "나무를 9번 찍었습니다.\n",
+      "나무를 10번 찍었습니다.\n",
+      "나무 넘어갑니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "treeHit = 0\n",
+    "while treeHit < 10:\n",
+    "    treeHit = treeHit +1\n",
+    "    print(\"나무를 %d번 찍었습니다.\" % treeHit)\n",
+    "if treeHit == 10:\n",
+    "    print(\"나무 넘어갑니다.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "7525671c-5342-4e4a-93c2-a0b1b6839cc2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "나무를 1번 찍었습니다.\n",
+      "나무를 2번 찍었습니다.\n",
+      "나무를 3번 찍었습니다.\n",
+      "나무를 4번 찍었습니다.\n",
+      "나무를 5번 찍었습니다.\n",
+      "나무를 6번 찍었습니다.\n",
+      "나무를 7번 찍었습니다.\n",
+      "나무를 8번 찍었습니다.\n",
+      "나무를 9번 찍었습니다.\n",
+      "나무를 10번 찍었습니다.\n",
+      "나무 넘어갑니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "namu = 10\n",
+    "while namu:\n",
+    "    namu -= 1\n",
+    "    print(f\"나무를 {10 - namu}번 찍었습니다.\")\n",
+    "print(\"나무 넘어갑니다.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "480bcf02-42ce-4afa-b9cc-b5e39de79f61",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "number = 0\n",
+    "while number != 4:\n",
+    "    print(prompt"
+   ]
   }
  ],
  "metadata": {
