--- a/python03.ipynb
+++ b/python03.ipynb
@@ -457,15 +457,259 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "480bcf02-42ce-4afa-b9cc-b5e39de79f61",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "1. Add\n",
+      "2. Del\n",
+      "3. List\n",
+      "4. Quit\n",
+      ". . .\n",
+      "Enter number : \n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "1. Add\n",
+      "2. Del\n",
+      "3. List\n",
+      "4. Quit\n",
+      ". . .\n",
+      "Enter number : \n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "1. Add\n",
+      "2. Del\n",
+      "3. List\n",
+      "4. Quit\n",
+      ". . .\n",
+      "Enter number : \n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "1. Add\n",
+      "2. Del\n",
+      "3. List\n",
+      "4. Quit\n",
+      ". . .\n",
+      "Enter number : \n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 4\n"
+     ]
+    }
+   ],
    "source": [
+    "prompt = \"\"\"\n",
+    "1. Add\n",
+    "2. Del\n",
+    "3. List\n",
+    "4. Quit\n",
+    ". . .\n",
+    "Enter number : \"\"\"\n",
+    "\n",
     "number = 0\n",
     "while number != 4:\n",
-    "    print(prompt"
+    "    print(prompt)\n",
+    "    number = int(input())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "9977e018-530a-4b90-bc0d-fd8ea156b762",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "돈을 받았으니 커피를 줍니다.\n",
+      "남은 커피의 양은 9개 입니다.\n",
+      "돈을 받았으니 커피를 줍니다.\n",
+      "남은 커피의 양은 8개 입니다.\n",
+      "돈을 받았으니 커피를 줍니다.\n",
+      "남은 커피의 양은 7개 입니다.\n",
+      "돈을 받았으니 커피를 줍니다.\n",
+      "남은 커피의 양은 6개 입니다.\n",
+      "돈을 받았으니 커피를 줍니다.\n",
+      "남은 커피의 양은 5개 입니다.\n",
+      "돈을 받았으니 커피를 줍니다.\n",
+      "남은 커피의 양은 4개 입니다.\n",
+      "돈을 받았으니 커피를 줍니다.\n",
+      "남은 커피의 양은 3개 입니다.\n",
+      "돈을 받았으니 커피를 줍니다.\n",
+      "남은 커피의 양은 2개 입니다.\n",
+      "돈을 받았으니 커피를 줍니다.\n",
+      "남은 커피의 양은 1개 입니다.\n",
+      "돈을 받았으니 커피를 줍니다.\n",
+      "남은 커피의 양은 0개 입니다.\n",
+      "커피가 다 떨어졌습니다. 판매를 중지합니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "coffee = 10\n",
+    "money = 300\n",
+    "while money:\n",
+    "    print(\"돈을 받았으니 커피를 줍니다.\")\n",
+    "    coffee = coffee -1\n",
+    "    print(\"남은 커피의 양은 %d개 입니다.\" %coffee)\n",
+    "    if coffee == 0:\n",
+    "        print(\"커피가 다 떨어졌습니다. 판매를 중지합니다.\")\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "aa053c61-a4a4-4567-a365-d7435f9358b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "돈을 넣어 주세요 :  500\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "거스름돈 200를 주고 커피를 줍니다.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "돈을 넣어 주세요 :  300\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "커피를 줍니다.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "돈을 넣어 주세요 :  100\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "돈을 다시 돌려주고 커피를 주지 않습니다.\n",
+      "남은 커피의 양은 8개 입니다.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "돈을 넣어 주세요 :  5000\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "거스름돈 4700를 주고 커피를 줍니다.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "돈을 넣어 주세요 :  \n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: ''",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m coffee \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m10\u001b[39m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[1;32m----> 3\u001b[0m     money \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m돈을 넣어 주세요 : \u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      4\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m money \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m300\u001b[39m:\n\u001b[0;32m      5\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m커피를 줍니다.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
+     ]
+    }
+   ],
+   "source": [
+    "coffee = 10\n",
+    "while True:\n",
+    "    money = int(input(\"돈을 넣어 주세요 : \"))\n",
+    "    if money == 300:\n",
+    "        print(\"커피를 줍니다.\")\n",
+    "        coffee = coffee - 1\n",
+    "    elif money > 300:\n",
+    "        print(\"거스름돈 %d를 주고 커피를 줍니다.\" %(money - 300))\n",
+    "        coffee = coffee - 1\n",
+    "    else:\n",
+    "        print(\"돈을 다시 돌려주고 커피를 주지 않습니다.\")\n",
+    "        print(\"남은 커피의 양은 %d개 입니다.\" %coffee)\n",
+    "    if coffee == 0:\n",
+    "        print(\"커피가 다 떨어졌습니다. 판매를 중지 합니다.\")\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86cddb18-6919-4eb3-8ba3-b1c9b6f28e1c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
