--- a/python03.ipynb
+++ b/python03.ipynb
@@ -705,8 +705,530 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 68,
+   "id": "05a195bf-52c4-4aeb-a846-5ba9b04435db",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "250000회 정상 진행 되었습니다.\n",
+      "1번은 41670번 (16.67%) 나왔습니다\n",
+      "2번은 41515번 (16.61%) 나왔습니다\n",
+      "3번은 41828번 (16.73%) 나왔습니다\n",
+      "4번은 41694번 (16.68%) 나왔습니다\n",
+      "5번은 41542번 (16.62%) 나왔습니다\n",
+      "6번은 41751번 (16.70%) 나왔습니다\n"
+     ]
+    }
+   ],
+   "source": [
+    "# random 주사위\n",
+    "import random as r\n",
+    "# ran = r.random()*6\n",
+    "box = []  # 박스 초기화\n",
+    "num = 0\n",
+    "num1 = 0\n",
+    "target = 250000\n",
+    "while num < target: # 10까지\n",
+    "    num = num + 1    # 시행 횟수 증가\n",
+    "    ran = r.randint(1,6)  # 랜덤 변수 설정\n",
+    "    box.append(ran)  # 박스에 숫자 더하기\n",
+    "if target == len(box):\n",
+    "    print(f'{target}회 정상 진행 되었습니다.')\n",
+    "else:\n",
+    "    print(f'검증 결과 횟수 이상이 있습니다. {target}회 목표로 동작하였으나, {len(box)}으로 측정되었습니다.')\n",
+    "while num1 < 6:\n",
+    "    num1 = num1 + 1\n",
+    "    count = box.count(num1)\n",
+    "    per = count/len(box)*100\n",
+    "    \n",
+    "    print(f'{num1}번은 {count}번 ({per:.2f}%) 나왔습니다')\n",
+    "\n",
+    "# print(box.count(1))\n",
+    "# print(box.count(2))\n",
+    "# print(box.count(3))\n",
+    "# print(box.count(4))\n",
+    "# print(box.count(5))\n",
+    "# print(box.count(6))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "86cddb18-6919-4eb3-8ba3-b1c9b6f28e1c",
+   "id": "32101e65-c2b3-422b-b7c5-8bbf900413a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dir r"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "7ea1d8c6-cba4-46fa-9643-d9aba0a7ced9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "one\n",
+      "two\n",
+      "three\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_list = ['one', 'two', 'three']\n",
+    "for i in test_list:   # for(시작; 끝; 스텝){} => for x in 리스트:   , range()\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "37a18df0-1992-4d1e-8396-190b03947e12",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 11\n",
+      "3 4 33\n",
+      "5 6 55\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 다양한 for문의 사용\n",
+    "a = [(1,2,11),(3,4,33),(5,6,55)]\n",
+    "for (x, y, z) in a:\n",
+    "    print(x, y, z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "6b78aeb5-82b4-42db-a5e3-7d057c1ed02c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1번 학생은 합격입니다.\n",
+      "2번 학생은 불합격입니다.\n",
+      "3번 학생은 합격입니다.\n",
+      "4번 학생은 불합격입니다.\n",
+      "5번 학생은 합격입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# marks1.py\n",
+    "marks = [90, 25, 67, 45, 80]  # 학생들의 시험 점수 리스트\n",
+    "\n",
+    "number = 0 # 학생들에게 붙여 줄 번호\n",
+    "for mark in marks:  # 90, 25, 67, 45, 80을 순서대로 mark에 대입\n",
+    "    number = number +1\n",
+    "    if mark >= 60:\n",
+    "        print(\"%d번 학생은 합격입니다.\" %number)\n",
+    "    else:\n",
+    "        print(\"%d번 학생은 불합격입니다.\" %number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "aa7e7d6d-0e08-4b0e-8c67-79c021c89f74",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1번 학생 축하합니다. 합격입니다.\n",
+      "3번 학생 축하합니다. 합격입니다.\n",
+      "5번 학생 축하합니다. 합격입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# marks2.py\n",
+    "marks = [90, 25, 67, 45, 80]  # 학생들의 시험 점수 리스트\n",
+    "\n",
+    "number = 0 # 학생들에게 붙여 줄 번호\n",
+    "for mark in marks:  # 90, 25, 67, 45, 80을 순서대로 mark에 대입\n",
+    "    number = number +1\n",
+    "    if mark < 60:\n",
+    "        continue\n",
+    "    print(\"%d번 학생 축하합니다. 합격입니다.\" %number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "dc08d807-f01e-43be-825b-c803e9229eba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "for num in range(1,10):  \n",
+    "    if num % 2 == 0:\n",
+    "     continue\n",
+    "    print(\"%d\" %num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "172708e2-5785-465c-8635-1d10e722ccdb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "range(0, 10)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# range 함수\n",
+    "a = range(10)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "16152c77-ebc3-4c70-8e09-658f52c774d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 4, 6, 8, 10, 12, 14, 16, 18, 20, 22, 24, 26, 28, 30, 32, 34, 36, 38, 40, 42, 44, 46, 48, 50, 52, 54, 56, 58, 60, 62, 64, 66, 68, 70, 72, 74, 76, 78, 80, 82, 84, 86, 88, 90, 92, 94, 96, 98]\n"
+     ]
+    }
+   ],
+   "source": [
+    "la = list(range(0,100,2))\n",
+    "print(la)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "e1b35628-db55-435a-a1c6-128b06be197a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "for even in range(0,10,2):  # odd 홀수, even 짝수, range(시작,끝,스텝)\n",
+    "    print(even)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "356b8f69-b39a-4cb9-be91-50db1dd052c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8515\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = 0\n",
+    "for i in range(1,131):\n",
+    "    result = result + i\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "f16ec7bd-ba03-4f87-b73f-20a86e30523c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1번 학생 축하합니다. 합격입니다.\n",
+      "3번 학생 축하합니다. 합격입니다.\n",
+      "5번 학생 축하합니다. 합격입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "mark = [90, 25, 67, 45, 80]\n",
+    "for number in range(len(marks)):\n",
+    "    if marks[number] < 60:\n",
+    "        continue\n",
+    "    print(\"%d번 학생 축하합니다. 합격입니다.\"%(number+1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "id": "f3bcf49c-c10d-4e56-8034-9cc51447e576",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     March 2025\n",
+      "Su Mo Tu We Th Fr Sa\n",
+      "                   1\n",
+      " 2  3  4  5  6  7  8\n",
+      " 9 10 11 12 13 14 15\n",
+      "16 17 18 19 20 21 22\n",
+      "23 24 25 26 27 28 29\n",
+      "30 31\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 연습\n",
+    "import calendar\n",
+    "\n",
+    "c = calendar.TextCalendar(calendar.SUNDAY)\n",
+    "print(c.formatmonth(2025,3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "b201d010-478b-4534-a859-a7029bed147a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "■■■■■■■■■■■"
+     ]
+    }
+   ],
+   "source": [
+    "import time as t\n",
+    "for x in range(11):\n",
+    "    print('■',end='')\n",
+    "    t.sleep(0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "id": "5b99cdb7-0acc-432a-b53e-1fe2100e47be",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n",
+      "<class 'tuple'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time as t\n",
+    "lt = []\n",
+    "tp = []\n",
+    "length = 10*1000*1000\n",
+    "for x in range(length):\n",
+    "    lt.append(x)\n",
+    "for t in range(length):\n",
+    "    tp.append(t)\n",
+    "tp = tuple(tp)\n",
+    "print(type(lt))\n",
+    "print(type(tp))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "fb7da693-c3aa-4662-9260-39094988b349",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7342467308044434\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "start = time.time()\n",
+    "for x in lt:\n",
+    "    lts = [1, 2, 3, 4, 5]\n",
+    "print(time.time() - start)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "22588ea3-e0af-4011-9a14-92f798c779a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7711086273193359\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "start = time.time()\n",
+    "for x in tp:\n",
+    "    tps = [1, 2, 3, 4, 5]\n",
+    "print(time.time() - start)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "9b360efb-4efe-4cee-b249-42eb89389791",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting tqdm\n",
+      "  Downloading tqdm-4.67.1-py3-none-any.whl.metadata (57 kB)\n",
+      "Requirement already satisfied: colorama in c:\\users\\admin\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from tqdm) (0.4.6)\n",
+      "Downloading tqdm-4.67.1-py3-none-any.whl (78 kB)\n",
+      "Installing collected packages: tqdm\n",
+      "Successfully installed tqdm-4.67.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install tqdm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "id": "80b7717f-2ed8-4f3f-b87e-ce8f453dd3ed",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [00:10<00:00,  9.78it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tqdm import tqdm\n",
+    "import time as tt\n",
+    "for x in tqdm(range(100)):\n",
+    "    pass\n",
+    "    tt.sleep(0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "d41c47c5-e27f-4d03-a67a-c42e2530d96a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "최대가 : 152817000, 최소가 : 149809000, 시작가 : 152630000, 변화폭 : 3008000.0 현재 상승장 입니다🔥🔥🔥\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 비트코인시세로 상승장 하강장 구분하기\n",
+    "import requests as req\n",
+    "url = \"https://api.bithumb.com/public/ticker/ALL_KRW\"\n",
+    "gdata = req.get(url).json()\n",
+    "btc = gdata['data']['BTC']\n",
+    "maxp = btc['max_price'] # 최대가\n",
+    "minp = btc['min_price'] # 최소가\n",
+    "openp = btc['opening_price'] # 시작가\n",
+    "bandp = float(maxp) - float(minp) # 변화폭\n",
+    "\n",
+    "ex1 = float(bandp) + float(openp)\n",
+    "\n",
+    "if ex1 > float(maxp):\n",
+    "    print(f'최대가 : {maxp}, 최소가 : {minp}, 시작가 : {openp}, 변화폭 : {bandp} 현재 상승장 입니다🔥🔥🔥')\n",
+    "else:\n",
+    "    print(f'최대가 : {maxp}, 최소가 : {minp}, 시작가 : {openp}, 변화폭 : {bandp} 현재 하락장 입니다❄️❄️❄️')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "4ebda3b1-d09b-4ae2-8c93-a186b1fd583f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "149932000\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests as req\n",
+    "url = 'https://api.bithumb.com/v1/candles/minutes/1?market=KRW-BTC&count=1'\n",
+    "btc_data = req.get(url).json()\n",
+    "print(btc_data[0]['trade_price'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fcafebb7-1c50-4e9d-8525-78bed79ef880",
    "metadata": {},
    "outputs": [],
    "source": []
