파일만들기

--- a/python03.ipynb
+++ b/python03.ipynb
@@ -46,7 +46,9 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "da4a47d9-b248-4e6a-9dca-e1432c319c24",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1824,6 +1826,7 @@
     "    lotto = sorted(random.sample(range(1,46),6))\n",
     "    la.append(lotto)\n",
     "    ls = ls + lotto\n",
+    "print(ls)\n",
     "\n",
     "ss = []\n",
     "\n",
@@ -2048,7 +2051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 29,
    "id": "85a71c3e-a796-450d-a5d6-b20adbed43c0",
    "metadata": {},
    "outputs": [
@@ -2056,7 +2059,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[6, 13, 17, 23, 24, 35, 39, 42, 59, 62] 10\n"
+      "[5, 12, 13, 17, 25, 32] 6\n"
      ]
     }
    ],
@@ -2070,24 +2073,24 @@
     "            box.append(ran)\n",
     "    box.sort()\n",
     "    print(box,len(box))\n",
-    "로또(10,100) # 로또(파라미터, 매개변수)"
+    "로또(6,45) # 로또(파라미터, 매개변수)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 27,
    "id": "5875cd6b-7451-4901-871d-cc86d6b41c06",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 7, 12, 21, 24, 31] 6\n",
-      "[16, 19, 31, 32, 41, 45] 6\n",
-      "[23, 26, 33, 36, 40, 44] 6\n",
-      "[11, 12, 15, 17, 24, 39] 6\n",
-      "[3, 11, 18, 23, 34, 39] 6\n"
+     "ename": "TypeError",
+     "evalue": "로또() missing 2 required positional arguments: '파라미터' and '매개변수'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[27], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m n \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m5\u001b[39m):\n\u001b[1;32m----> 2\u001b[0m     \u001b[43m로또\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 로또() missing 2 required positional arguments: '파라미터' and '매개변수'"
      ]
     }
    ],
@@ -2605,9 +2608,618 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9d46a80d-3c3b-4312-bbcc-ae0decddcc25",
+   "metadata": {},
+   "source": [
+    "## 함수 안에서 선언한 변수의 효력 범위"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "b8345cae-9159-4bba-8efc-19bf01bd84f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# test1\n",
+    "a = 1\n",
+    "def test1(a):\n",
+    "    a = a +1\n",
+    "test1(a)\n",
+    "print(a)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3202698b-1fe1-4786-80a8-96a6e448b5c5",
+   "id": "45d2c87b-8ab4-4b5d-a063-0fb7a8f9b50e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test2\n",
+    "b = 1\n",
+    "def test2(a):\n",
+    "    b = b +1\n",
+    "test2(3)\n",
+    "# print(b) # 에러발생"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "398924e1-e119-47bc-b0d9-aa91e0beeaa7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# test3\n",
+    "c = 1\n",
+    "def test3(c):\n",
+    "    c = c + 1\n",
+    "    return c\n",
+    "c = test3(c)\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "ec0b86b3-2b18-4807-ab0f-a82b90c11703",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# test4\n",
+    "d = 1\n",
+    "def test4():\n",
+    "    global d\n",
+    "    d = d + 1\n",
+    "test4()\n",
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "72799ee1-02fd-499f-a1d1-314077d47609",
+   "metadata": {},
+   "source": [
+    "## lambda 예약어 (익명함수)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "fab46c09-c2d6-447b-9140-da7863969851",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "def test(a,b):\n",
+    "    return a+b\n",
+    "add = lambda a,b:a+b # 함수_이름 = lambda 매개변수1, 매개변수2, ... : 매개변수를_이용한_표현식\n",
+    "print(add(3,4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "528adea1-7b6c-48e8-a6ed-be1d15557178",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a1 = [ x for x in range(10)]\n",
+    "print(a1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "66ceea7f-fcf9-48b2-aeac-1a32abf86f7d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 4, 6, 8, 10, 12, 14, 16, 18]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a2 = [ (lambda x:x*2)(x) for x in range(10)]\n",
+    "print(a2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "64b26113-dfda-4b45-8d18-7abcedfa3cd1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 4, 9, 16, 25, 36, 49, 64, 81]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 응용\n",
+    "a3 = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+    "p = list(map(lambda x : x**2, a3))\n",
+    "print(p)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21547f32-0286-430d-a1cc-c985a1177553",
+   "metadata": {},
+   "source": [
+    "# 파일 읽고 쓰기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "a3c30db0-731a-453a-90c5-6c49b36b4181",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = open(\"새파일생성.txt\",\"w\")\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d99637e-3172-4348-ab6a-8cf92cf5e172",
+   "metadata": {},
+   "source": [
+    "<table>\n",
+    "<thead>\n",
+    "<tr>\n",
+    "<th>파일열기모드</th>\n",
+    "<th>설명</th>\n",
+    "</tr>\n",
+    "</thead>\n",
+    "<tbody>\n",
+    "<tr>\n",
+    "<td>r</td>\n",
+    "<td>읽기 모드: 파일을 읽기만 할 때 사용한다.</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td>w</td>\n",
+    "<td>쓰기 모드: 파일에 내용을 쓸 때 사용한다.</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td>a</td>\n",
+    "<td>추가 모드: 파일의 마지막에 새로운 내용을 추가할 때 사용한다.</td>\n",
+    "</tr>\n",
+    "</tbody>\n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "ca1888bc-5eef-4816-99b3-f2b028f61491",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = \"./testfile/\"\n",
+    "f = open(path + \"새파일생성2.txt\",\"w\")\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "55d793fc-bfec-452c-812d-0f32eb18b7c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = \"./testfile/\"\n",
+    "f = open(path + \"새파일생성3.txt\",\"w\",encoding =\"UTF-8\")\n",
+    "for n in range(10):\n",
+    "    f.write(f\"한글 테스트\\n\")\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "1b40be4d-b53b-4011-b538-c64fb2b15548",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "\n",
+    "path = \"./testfile/\"\n",
+    "f = open(path + \"lotto.txt\",\"w\",encoding =\"UTF-8\")\n",
+    "for i in range(100):\n",
+    "    lotto = random.sample(range(1, 46), 6)\n",
+    "    lotto.sort()\n",
+    "    f.write(str(lotto)+\"\\n\")\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "cb82a384-2dfb-4514-99cd-5b7b307e1f81",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def diary(name):\n",
+    "    path = \"./testfile/\"\n",
+    "    f = open(path + name + \".txt\",\"a\",encoding=\"utf-8\")\n",
+    "    \n",
+    "    while 1:\n",
+    "        inp = input(\"작성하고 싶은 내용\")\n",
+    "        if inp == '그만' : break\n",
+    "        f.write(inp+'\\n')\n",
+    "    f.close"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "495c3962-b9f0-4c35-ba94-6d1a4fad910a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "작성하고 싶은 내용 오늘날씨가 춥다\n",
+      "작성하고 싶은 내용 그리고 춥다\n",
+      "작성하고 싶은 내용 너무 춥다\n",
+      "작성하고 싶은 내용 배도 고프다\n",
+      "작성하고 싶은 내용 그만\n"
+     ]
+    }
+   ],
+   "source": [
+    "diary('20250201일기')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f6a8c371-cb61-4411-a759-e3ea63490480",
+   "metadata": {},
+   "source": [
+    "## 파일을 읽는 방법"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "1d802011-97ad-4020-98fc-a5e9e862c303",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = \"./testfile/\"\n",
+    "f = open(path + \"새파일생성4.txt\",\"w\",encoding =\"UTF-8\")\n",
+    "for n in range(10):\n",
+    "    f.write(f\"{n+1}번째 한글 테스트\\n\")\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "b014e83e-c726-4d79-917c-e4d633cda0ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1번째 한글 테스트\n",
+      "\n",
+      "2번째 한글 테스트\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# readline\n",
+    "f = open(path + \"새파일생성4.txt\",\"r\",encoding =\"UTF-8\")\n",
+    "line = f.readline()\n",
+    "print(line)\n",
+    "line = f.readline()\n",
+    "print(line)\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "e1e1964b-8a0d-4fe8-bef5-063e341dd182",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1번째 한글 테스트\n",
+      "\n",
+      "2번째 한글 테스트\n",
+      "\n",
+      "3번째 한글 테스트\n",
+      "\n",
+      "4번째 한글 테스트\n",
+      "\n",
+      "5번째 한글 테스트\n",
+      "\n",
+      "6번째 한글 테스트\n",
+      "\n",
+      "7번째 한글 테스트\n",
+      "\n",
+      "8번째 한글 테스트\n",
+      "\n",
+      "9번째 한글 테스트\n",
+      "\n",
+      "10번째 한글 테스트\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# readline + while\n",
+    "f = open(path + \"새파일생성4.txt\",\"r\",encoding=\"utf-8\")\n",
+    "while 1:\n",
+    "    line = f.readline()\n",
+    "    if not line : break\n",
+    "    print(line)\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "d5972ffd-49bb-4482-8d97-f88984279ad1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1번째 한글 테스트\n",
+      "2번째 한글 테스트\n",
+      "3번째 한글 테스트\n",
+      "4번째 한글 테스트\n",
+      "5번째 한글 테스트\n",
+      "6번째 한글 테스트\n",
+      "7번째 한글 테스트\n",
+      "8번째 한글 테스트\n",
+      "9번째 한글 테스트\n",
+      "10번째 한글 테스트\n"
+     ]
+    }
+   ],
+   "source": [
+    "# readlines\n",
+    "path = \"./testfile/\"\n",
+    "f = open(path + \"새파일생성4.txt\",\"r\",encoding=\"utf-8\")\n",
+    "lines = f.readlines()\n",
+    "# print(lines, type(lines))\n",
+    "for n in lines:\n",
+    "    print(n,end=\"\")\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "2a828fe7-04b0-4ca1-becc-a29bb80b65ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['1', '번', '째', ' ', '한', '글', ' ', '테', '스', '트', '\\n']\n",
+      "1번째 한글 테스트\n",
+      "['2', '번', '째', ' ', '한', '글', ' ', '테', '스', '트', '\\n']\n",
+      "2번째 한글 테스트\n",
+      "['3', '번', '째', ' ', '한', '글', ' ', '테', '스', '트', '\\n']\n",
+      "3번째 한글 테스트\n",
+      "['4', '번', '째', ' ', '한', '글', ' ', '테', '스', '트', '\\n']\n",
+      "4번째 한글 테스트\n",
+      "['5', '번', '째', ' ', '한', '글', ' ', '테', '스', '트', '\\n']\n",
+      "5번째 한글 테스트\n",
+      "['6', '번', '째', ' ', '한', '글', ' ', '테', '스', '트', '\\n']\n",
+      "6번째 한글 테스트\n",
+      "['7', '번', '째', ' ', '한', '글', ' ', '테', '스', '트', '\\n']\n",
+      "7번째 한글 테스트\n",
+      "['8', '번', '째', ' ', '한', '글', ' ', '테', '스', '트', '\\n']\n",
+      "8번째 한글 테스트\n",
+      "['9', '번', '째', ' ', '한', '글', ' ', '테', '스', '트', '\\n']\n",
+      "9번째 한글 테스트\n",
+      "['1', '0', '번', '째', ' ', '한', '글', ' ', '테', '스', '트', '\\n']\n",
+      "10번째 한글 테스트\n"
+     ]
+    }
+   ],
+   "source": [
+    "# readlines + strip()\n",
+    "path = \"./testfile/\"\n",
+    "f = open(path + \"새파일생성4.txt\",\"r\",encoding=\"utf-8\")\n",
+    "lines = f.readlines()\n",
+    "# print(lines, type(lines))\n",
+    "for n in lines:\n",
+    "    print(list(n))\n",
+    "    n = n.strip() # \\n을 자운다\n",
+    "    print(n)\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "d318a5fc-e1c4-4aa0-b9b9-1b27e2ff52a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test\n",
+    "f = open(\"파일이름.txt\",\"w\")\n",
+    "f.write('내용작성')\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "4e32fe2e-2820-4df0-af7d-acae5698d874",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1번째 한글 테스트\n",
+      "\n",
+      "2번째 한글 테스트\n",
+      "\n",
+      "3번째 한글 테스트\n",
+      "\n",
+      "4번째 한글 테스트\n",
+      "\n",
+      "5번째 한글 테스트\n",
+      "\n",
+      "6번째 한글 테스트\n",
+      "\n",
+      "7번째 한글 테스트\n",
+      "\n",
+      "8번째 한글 테스트\n",
+      "\n",
+      "9번째 한글 테스트\n",
+      "\n",
+      "10번째 한글 테스트\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# read 함수 사용하기\n",
+    "path = \"./testfile/\"\n",
+    "f = open(path + \"새파일생성4.txt\",\"r\",encoding=\"utf-8\")\n",
+    "for line in f:\n",
+    "    print(line)\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "641058e7-b3f4-4783-a70b-102672809259",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 4. for로 출력하기\n",
+    "path = \"./testfile/\"\n",
+    "f = open(path + \"새파일생성4.txt\",\"r\",encoding=\"utf-8\")\n",
+    "for line in f:\n",
+    "    print(line)\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "d572c04f-2c1e-4b7f-a321-48300cf288bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1번째 한글 테스트\n",
+      "\n",
+      "2번째 한글 테스트\n",
+      "\n",
+      "3번째 한글 테스트\n",
+      "\n",
+      "4번째 한글 테스트\n",
+      "\n",
+      "5번째 한글 테스트\n",
+      "\n",
+      "6번째 한글 테스트\n",
+      "\n",
+      "7번째 한글 테스트\n",
+      "\n",
+      "8번째 한글 테스트\n",
+      "\n",
+      "9번째 한글 테스트\n",
+      "\n",
+      "10번째 한글 테스트\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# with 문과 함께 사용하기, 자동 열고, 닫기\n",
+    "path = \"./testfile/\"\n",
+    "with open(path + \"새파일생성4.txt\",\"r\",encoding=\"utf-8\") as f:\n",
+    "    for line in f:\n",
+    "        print(line)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "71991785-a613-4018-8d7d-94c7c999ee20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# file_with.py\n",
+    "with open(\"foo.txt\", \"w\") as f:\n",
+    "    f.write(\"Life is too short, you need python\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0bbf3321-90b2-44d9-aa99-5de636be10cd",
    "metadata": {},
    "outputs": [],
    "source": []
