--- a/python03.ipynb
+++ b/python03.ipynb
@@ -3217,9 +3217,118 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3afdf709-fedb-4fe8-90d7-edcc20651e74",
+   "metadata": {},
+   "source": [
+    "## 프로그램의 입출력"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "5207177a-6383-4d82-973a-675502ebe2e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['C:\\\\Users\\\\Admin\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python313\\\\Lib\\\\site-packages\\\\ipykernel_launcher.py', '-f', 'C:\\\\Users\\\\Admin\\\\AppData\\\\Roaming\\\\jupyter\\\\runtime\\\\kernel-f2628601-303a-42a4-bef7-a99eed08dcc4.json']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "args = sys.argv\n",
+    "print(args)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "id": "a9d4845e-4e88-4368-924c-6ffd55d67dc6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "===2단===\n",
+      "2 X 1 = 2\n",
+      "2 X 2 = 4\n",
+      "2 X 3 = 6\n",
+      "2 X 4 = 8\n",
+      "2 X 5 = 10\n",
+      "2 X 6 = 12\n",
+      "2 X 7 = 14\n",
+      "2 X 8 = 16\n",
+      "2 X 9 = 18\n"
+     ]
+    }
+   ],
+   "source": [
+    "def gugu(a,b):\n",
+    "    for i in range(a,a+b):\n",
+    "        print(f'==={i}단===')\n",
+    "        for j in range(1,10):\n",
+    "           result =f'{i} X {j} = {j*i}'\n",
+    "           print(result)\n",
+    "gugu(2,1)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0bbf3321-90b2-44d9-aa99-5de636be10cd",
+   "id": "0e62abde-49a1-4598-998f-6095f4e18589",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gugu(end = 9):\n",
+    "    data =''\n",
+    "    for j in range(2,end + 1):\n",
+    "        print(f\"{str(j)+'단' :=^10}\")\n",
+    "        for i in range(1,10):\n",
+    "            data += (f'{j} x {i} = {j*i}') + '\\n'\n",
+    "    return data\n",
+    "print(gugu(5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "id": "022ee0b3-ed1e-46de-9aee-f2913e0cd089",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19\n",
+      "삼성전자:55,700원\n",
+      "17\n",
+      "기아:93,800원\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests as req\n",
+    "url = \"https://finance.naver.com/sise/sise_market_sum.naver\"\n",
+    "web = req.get(url)\n",
+    "html = web.text\n",
+    "# print(html)\n",
+    "f1 = html.find('삼성전자')\n",
+    "print(html[f1:f1+100].find('<td class=\"number\">'))\n",
+    "print('삼성전자:'+html[f1:f1+100][19:50].replace('<td class=\"number\">',\"\").replace('</td>',\"\").replace('\\n',\"\") + \"원\")\n",
+    "f2 = html.find('기아')\n",
+    "print(html[f2:f2+100].find('<td class=\"number\">'))\n",
+    "print('기아:'+html[f2:f2+100][17:50].replace('<td class=\"number\">',\"\").replace('</td>',\"\").replace('\\n',\"\").replace('\\t',\"\") + \"원\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8bc398d6-e0c2-4e5a-9b70-40911470b47b",
    "metadata": {},
    "outputs": [],
    "source": []
