--- a/python03.ipynb
+++ b/python03.ipynb
@@ -3296,7 +3296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "id": "022ee0b3-ed1e-46de-9aee-f2913e0cd089",
    "metadata": {},
    "outputs": [
@@ -3305,9 +3305,9 @@
      "output_type": "stream",
      "text": [
       "19\n",
-      "삼성전자:54,800원\n",
+      "삼성전자:56,100원\n",
       "17\n",
-      "기아:93,300원\n"
+      "기아:94,700원\n"
      ]
     }
    ],
@@ -3672,7 +3672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 1,
    "id": "9fc4c666-40b3-4e7d-a242-7385c2891677",
    "metadata": {},
    "outputs": [],
@@ -3691,7 +3691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 2,
    "id": "621ebc04-225a-4389-a1e6-a32f23c66de1",
    "metadata": {},
    "outputs": [],
@@ -3703,7 +3703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 3,
    "id": "012fdb78-d29c-4b45-aba5-d2a1717844b6",
    "metadata": {},
    "outputs": [
@@ -3731,7 +3731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 4,
    "id": "0d81707b-51f1-4d60-b745-7d9a0f3956d1",
    "metadata": {},
    "outputs": [
@@ -3739,23 +3739,67 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "HD속도를 올려요. 현재속도는 91km/h\n",
-      "HD속도를 올려요. 현재속도는 92km/h\n",
-      "HD속도를 올려요. 현재속도는 93km/h\n",
-      "HD속도를 올려요. 현재속도는 94km/h\n",
-      "HD속도를 올려요. 현재속도는 95km/h\n",
-      "HD속도를 올려요. 현재속도는 96km/h\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[73], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m n \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m60\u001b[39m):\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;28mprint\u001b[39m(car1\u001b[38;5;241m.\u001b[39macc(\u001b[38;5;241m1\u001b[39m))\n\u001b[1;32m----> 4\u001b[0m     \u001b[43mt\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m90Km/h 속도유지중....\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+      "HD속도를 올려요. 현재속도는 31km/h\n",
+      "HD속도를 올려요. 현재속도는 32km/h\n",
+      "HD속도를 올려요. 현재속도는 33km/h\n",
+      "HD속도를 올려요. 현재속도는 34km/h\n",
+      "HD속도를 올려요. 현재속도는 35km/h\n",
+      "HD속도를 올려요. 현재속도는 36km/h\n",
+      "HD속도를 올려요. 현재속도는 37km/h\n",
+      "HD속도를 올려요. 현재속도는 38km/h\n",
+      "HD속도를 올려요. 현재속도는 39km/h\n",
+      "HD속도를 올려요. 현재속도는 40km/h\n",
+      "HD속도를 올려요. 현재속도는 41km/h\n",
+      "HD속도를 올려요. 현재속도는 42km/h\n",
+      "HD속도를 올려요. 현재속도는 43km/h\n",
+      "HD속도를 올려요. 현재속도는 44km/h\n",
+      "HD속도를 올려요. 현재속도는 45km/h\n",
+      "HD속도를 올려요. 현재속도는 46km/h\n",
+      "HD속도를 올려요. 현재속도는 47km/h\n",
+      "HD속도를 올려요. 현재속도는 48km/h\n",
+      "HD속도를 올려요. 현재속도는 49km/h\n",
+      "HD속도를 올려요. 현재속도는 50km/h\n",
+      "HD속도를 올려요. 현재속도는 51km/h\n",
+      "HD속도를 올려요. 현재속도는 52km/h\n",
+      "HD속도를 올려요. 현재속도는 53km/h\n",
+      "HD속도를 올려요. 현재속도는 54km/h\n",
+      "HD속도를 올려요. 현재속도는 55km/h\n",
+      "HD속도를 올려요. 현재속도는 56km/h\n",
+      "HD속도를 올려요. 현재속도는 57km/h\n",
+      "HD속도를 올려요. 현재속도는 58km/h\n",
+      "HD속도를 올려요. 현재속도는 59km/h\n",
+      "HD속도를 올려요. 현재속도는 60km/h\n",
+      "HD속도를 올려요. 현재속도는 61km/h\n",
+      "HD속도를 올려요. 현재속도는 62km/h\n",
+      "HD속도를 올려요. 현재속도는 63km/h\n",
+      "HD속도를 올려요. 현재속도는 64km/h\n",
+      "HD속도를 올려요. 현재속도는 65km/h\n",
+      "HD속도를 올려요. 현재속도는 66km/h\n",
+      "HD속도를 올려요. 현재속도는 67km/h\n",
+      "HD속도를 올려요. 현재속도는 68km/h\n",
+      "HD속도를 올려요. 현재속도는 69km/h\n",
+      "HD속도를 올려요. 현재속도는 70km/h\n",
+      "HD속도를 올려요. 현재속도는 71km/h\n",
+      "HD속도를 올려요. 현재속도는 72km/h\n",
+      "HD속도를 올려요. 현재속도는 73km/h\n",
+      "HD속도를 올려요. 현재속도는 74km/h\n",
+      "HD속도를 올려요. 현재속도는 75km/h\n",
+      "HD속도를 올려요. 현재속도는 76km/h\n",
+      "HD속도를 올려요. 현재속도는 77km/h\n",
+      "HD속도를 올려요. 현재속도는 78km/h\n",
+      "HD속도를 올려요. 현재속도는 79km/h\n",
+      "HD속도를 올려요. 현재속도는 80km/h\n",
+      "HD속도를 올려요. 현재속도는 81km/h\n",
+      "HD속도를 올려요. 현재속도는 82km/h\n",
+      "HD속도를 올려요. 현재속도는 83km/h\n",
+      "HD속도를 올려요. 현재속도는 84km/h\n",
+      "HD속도를 올려요. 현재속도는 85km/h\n",
+      "HD속도를 올려요. 현재속도는 86km/h\n",
+      "HD속도를 올려요. 현재속도는 87km/h\n",
+      "HD속도를 올려요. 현재속도는 88km/h\n",
+      "HD속도를 올려요. 현재속도는 89km/h\n",
+      "HD속도를 올려요. 현재속도는 90km/h\n",
+      "90Km/h 속도유지중....\n"
      ]
     }
    ],
@@ -4147,8 +4191,227 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "6d36ee26-3959-4891-8b53-69592411503d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "\n",
+    "\n",
+    "class Character:\n",
+    "    def __init__(self, name, hp, attack_p):\n",
+    "        \"\"\"캐릭터 초기화\"\"\"\n",
+    "        self.name = name\n",
+    "        self.hp = hp\n",
+    "        self.attack_p = attack_p\n",
+    "\n",
+    "    def attack(self, opponent):\n",
+    "        \"\"\"상대방을 공격\"\"\"\n",
+    "        damage = random.randint(2, self.attack_p)\n",
+    "        opponent.hp -= damage\n",
+    "        print(f'{self.name}이(가) {opponent.name}을(를) 공격하여 {damage} 데미지를 입혔습니다.')\n",
+    "\n",
+    "    def now_status(self):\n",
+    "        \"\"\"현재 체력 상태 확인\"\"\"\n",
+    "        return f'{self.name} 체력 : {self.hp}'\n",
+    "\n",
+    "    def is_alive(self):\n",
+    "        \"\"\"캐릭터 생존여부 확인\"\"\"\n",
+    "        return self.hp > 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "fc1c8675-f39e-488c-bc9b-02f55f19ad93",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 영웅과 괴물 생성\n",
+    "player = Character(\"영웅\", 50, 15)\n",
+    "monster = Character(\"골렘\", 60, 9)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "c4196463-3b94-40ce-88a1-3ade5e5d0dab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "===== 전투시작 =====\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "공격하려면 엔터를 치세요. \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "영웅이(가) 골렘을(를) 공격하여 6 데미지를 입혔습니다.\n",
+      "골렘이(가) 영웅을(를) 공격하여 6 데미지를 입혔습니다.\n",
+      "영웅 체력 : 44  VS 골렘 체력 : 54\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "공격하려면 엔터를 치세요. \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "영웅이(가) 골렘을(를) 공격하여 14 데미지를 입혔습니다.\n",
+      "골렘이(가) 영웅을(를) 공격하여 4 데미지를 입혔습니다.\n",
+      "영웅 체력 : 40  VS 골렘 체력 : 40\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "공격하려면 엔터를 치세요. \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "영웅이(가) 골렘을(를) 공격하여 4 데미지를 입혔습니다.\n",
+      "골렘이(가) 영웅을(를) 공격하여 9 데미지를 입혔습니다.\n",
+      "영웅 체력 : 31  VS 골렘 체력 : 36\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "공격하려면 엔터를 치세요. \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "영웅이(가) 골렘을(를) 공격하여 2 데미지를 입혔습니다.\n",
+      "골렘이(가) 영웅을(를) 공격하여 3 데미지를 입혔습니다.\n",
+      "영웅 체력 : 28  VS 골렘 체력 : 34\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "공격하려면 엔터를 치세요. \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "영웅이(가) 골렘을(를) 공격하여 7 데미지를 입혔습니다.\n",
+      "골렘이(가) 영웅을(를) 공격하여 2 데미지를 입혔습니다.\n",
+      "영웅 체력 : 26  VS 골렘 체력 : 27\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "공격하려면 엔터를 치세요. \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "영웅이(가) 골렘을(를) 공격하여 10 데미지를 입혔습니다.\n",
+      "골렘이(가) 영웅을(를) 공격하여 8 데미지를 입혔습니다.\n",
+      "영웅 체력 : 18  VS 골렘 체력 : 17\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "공격하려면 엔터를 치세요. \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "영웅이(가) 골렘을(를) 공격하여 12 데미지를 입혔습니다.\n",
+      "골렘이(가) 영웅을(를) 공격하여 3 데미지를 입혔습니다.\n",
+      "영웅 체력 : 15  VS 골렘 체력 : 5\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "공격하려면 엔터를 치세요. \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "영웅이(가) 골렘을(를) 공격하여 3 데미지를 입혔습니다.\n",
+      "골렘이(가) 영웅을(를) 공격하여 9 데미지를 입혔습니다.\n",
+      "영웅 체력 : 6  VS 골렘 체력 : 2\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "공격하려면 엔터를 치세요. \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "영웅이(가) 골렘을(를) 공격하여 15 데미지를 입혔습니다.\n",
+      "영웅 체력 : 6  VS 골렘 체력 : -13\n",
+      "당신이 승리하였습니다.😆\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"===== 전투시작 =====\")\n",
+    "while player.is_alive() and monster.is_alive():\n",
+    "    input(\"공격하려면 엔터를 치세요.\")\n",
+    "    player.attack(monster)\n",
+    "    if monster.is_alive():\n",
+    "       monster.attack(player)\n",
+    "    print(player.now_status(), ' VS', monster.now_status())\n",
+    "\n",
+    "# 결과\n",
+    "if player.is_alive():\n",
+    "    print(\"당신이 승리하였습니다.😆\")\n",
+    "else:\n",
+    "    print(\"패배하였습니다. . .😱\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45872185-1aa8-4e34-aa5d-40d07780627e",
    "metadata": {},
    "outputs": [],
    "source": []
